--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:et_supportMode="charCounter"
-        android:hint="您的版权名称"
+        android:hint="@string/s7"
         android:textDirection="locale"
         android:paddingTop="8dp"
         />
