--- a/app/src/main/res/layout/view_model7.xml
+++ b/app/src/main/res/layout/view_model7.xml
@@ -15,7 +15,7 @@
             android:id="@+id/iv_icon_model7"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_centerVertical="true"
             tools:src="@drawable/albumset_preselected"
             />
@@ -24,24 +24,24 @@
             android:id="@+id/tv_title_model7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/iv_icon_model7"
-            android:layout_marginLeft="8dp"
+            android:layout_toEndOf="@id/iv_icon_model7"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:textColor="@color/primary_text"
-            tools:text="签名日期"
+            tools:text="@string/s13"
             />
 
         <TextView
             android:id="@+id/tv_content_model7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="26dp"
+            android:layout_marginEnd="26dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:layout_alignParentRight="true"
-            android:textSize="16dp"
+            android:layout_alignParentEnd="true"
+            android:textSize="16sp"
             android:textColor="@color/primary_text"
             tools:text="2018.12.12"
             />
