--- a/app/src/main/res/layout/aty_mine.xml
+++ b/app/src/main/res/layout/aty_mine.xml
@@ -47,7 +47,7 @@
         android:layout_marginTop="150dp"
         android:background="@color/primary"
         android:elevation="5dp"
-        android:text="确定"
+        android:text="@string/s3"
         android:textColor="@color/text"
         />
 
