--- a/app/src/main/res/layout/layout_common_title.xml
+++ b/app/src/main/res/layout/layout_common_title.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:maxLength="10"
-        android:text="Title"
+        android:text="@string/title"
         android:textColor="@color/text"
         android:textSize="20dp"/>
 
