--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -6,16 +6,16 @@
         <item
             android:id="@+id/navi_album"
             android:icon="@mipmap/album_black_24dp"
-            android:title="我的相册"/>
+            android:title="@string/s15"/>
         <item
             android:id="@+id/navi_cloudpics"
             android:icon="@mipmap/cloud_black_24dp"
-            android:title="云端相册"/>
+            android:title="@string/s16"/>
 
         <item
             android:id="@+id/navi_settings"
             android:icon="@mipmap/settings_black_24dp"
-            android:title="设置"/>
+            android:title="@string/action_settings"/>
 
     </group>
 
